--- a/style.css
+++ b/style.css
@@ -3,8 +3,22 @@
     color: blue;
 }
 
-.cnn10Script {
-    font-size: 20px;
-    width: 80%;
-    margin: 0;
-}
+textarea {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    resize: none; /* Optional: Disable manual resizing */
+    /* overflow-y: hidden; Hide vertical scrollbar initially */
+    overflow-y: scroll;
+    font-size: 18px;
+  }
+
+  .cnn10Video {
+    position: fixed;
+    top: 10px;
+    right: 0;
+    width: 50%;
+    background-color: #f0f0f0; /* Set your preferred background color */
+    padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional box shadow for a subtle effect */
+  }
