--- a/style.css
+++ b/style.css
@@ -2,3 +2,16 @@ a {
     font-size: 20px;
     color: blue;
 }
+
+#video-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 30%;
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
